[gd_scene load_steps=5 format=3 uid="uid://cq5f4p2m6tofn"]

[ext_resource type="Script" path="res://403. Options/Scripts/options_menu.gd" id="1_m3wp0"]
[ext_resource type="Theme" uid="uid://dohrlimgek4f1" path="res://404. Start Menu/Assets/wood_button.tres" id="2_83qf1"]
[ext_resource type="PackedScene" uid="uid://ckt5oaek0ekwe" path="res://404. Start Menu/Scenes/water_backround.tscn" id="2_ev06j"]
[ext_resource type="AudioStream" uid="uid://2v40afj1v8vy" path="res://BackgroundMusic/CatchMeIfYouCan.mp3" id="4_wjoac"]

[node name="OptionMenu" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_m3wp0")

[node name="TileMapLayer" parent="." instance=ExtResource("2_ev06j")]

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -60.5
offset_right = 60.5
offset_bottom = 147.0
grow_horizontal = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Volume" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_83qf1")
text = "Volume"

[node name="Difficulty" type="Button" parent="MarginContainer/VBoxContainer"]
visible = false
layout_mode = 2
theme = ExtResource("2_83qf1")
text = "Easy"

[node name="Back" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_83qf1")
text = "Back"

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_wjoac")
volume_db = -24.0
autoplay = true
parameters/looping = true

[connection signal="pressed" from="MarginContainer/VBoxContainer/Volume" to="." method="_on_volume_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Difficulty" to="." method="_on_difficulty_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Back" to="." method="_on_back_pressed"]
